# failmap

./: .codeclimate.yml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .tm_properties  .travis.yml  Dockerfile  Dockerfile.osaft-worker  LICENCE_3RDPARTY.md  MANIFEST.in  Makefile  README.md  bandit.yaml  blaat.profile  celery.py  celery_test.py  celerybeat-schedule.db  clean_for_release.py  cookie  db.sqlite3-journal  docker-compose.yaml  example_organizations_import_file.xlsx  failmap_organization_export_20180305_082347.yaml  failmap_organization_export_20180305_083059.yaml  index.html  manage.py  map.txt  package-lock.json  publiccode.yml  pyproject.toml  pytest.ini  requirements-deploy.in  requirements-deploy.txt  requirements-dev.in  requirements-dev.txt  (+8 more)
admin/: failmap.db  settings.py  urls.py
docs/: Makefile  make.bat  scanner design.txt
docs/logo/: readme.md
docs/source/: conf.py  index.rst
docs/source/topics/: administration.md  data_model.md  deployment.md  development.md  docker.md  getting_started.md  gis_and_map_information.md  history.md  running_a_remote_worker.md  scanning_policy.md  (+7 more)
etc/: mysql-minimal-memory.cnf
fail/: admin.py  apps.py  models.py
fail/migrations/: 0001_initial.py  0002_auto_20170222_1815.py  0003_auto_20170222_1817.py  0004_auto_20170222_1826.py  0005_auto_20170222_1904.py  0005_auto_20170222_1955.py  0006_merge_20170222_2000.py  0007_auto_20170222_2008.py  0008_merge_20170222_2030.py  0009_auto_20170222_2030.py
failmap/: __init__.py  celery.py  converters.py  dramatiq.py  settings.py  signals.py  types.py  urls.py  wsgi.py
failmap/app/: __init__.py  admin.py  dashboard.py  dashboard_module_views.py  dashboard_modules.py  models.py  tasks.py  tests.py
failmap/celery/: __init__.py  worker.py
failmap/game/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
failmap/hypersh/: admin.py  autoscale.py  models.py  tasks.py
failmap/map/: admin.py  calculate.py  geojson.py  models.py  points_and_calculations.py  rating.py  rebuild_report.py  report.py  stats.py  tasks.py  urls.py  views.py
failmap/monitoryour/: apps.py  views.py
failmap/organizations/: admin.py  adminstrative_transformations.py  apps.py  dashboard.py  dashboard_modules.py  models.py  signals.py
failmap/pro/: admin.py  apps.py  forms.py  models.py  sync_datafeeds.py  urllist_report.py  urllist_report_historically.py  urls.py  views.py
failmap/scanners/: admin.py  apps.py  common.py  models.py  onboard.py  scanmanager.py  scanner.py  scanner_dns.py  scanner_dnssec.py  scanner_dummy.py  scanner_dummy_dumdum.py  scanner_ftp.py  scanner_http.py  scanner_plain_http.py  scanner_screenshot.py  scanner_security_headers.py  scanner_tls_osaft.py  scanner_tls_qualys.py  scanner_tls_standalone.py  state_manager.py  task_experiments.py  tasks.py  timeout.py  tls_scan_manager.py  tlsqualys_scan_manager.py  types.py  url_scan_manager.py
failmap_admin/: __init__.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
failmap_admin/app/: admin.py  common.py  models.py  tests.py
failmap_admin/map/: admin.py  determineratings.py  models.py  points_and_calculations.py  rating.py  stats.py  tasks.py  urls.py  views.py
failmap_admin/organizations/: admin.py  dashboard.py  dashboard_modules.py  models.py
failmap_admin/scanners/: admin.py  common.py  endpoint_scan_manager.py  fixture_upgrade_production_data.py  forms.py  managers.py  models.py  onboard.py  scanner_dns.py  scanner_dummy_dumdum.py  scanner_http.py  scanner_plain_http.py  scanner_screenshot.py  scanner_security_headers.py  scanner_tls.py  scanner_tls_qualys.py  scanners.py  tasks.py  timeout.py  urls.py  views.py
tests/: docker-compose.yml  docker.rb  docker.sh  staging.sh  test_all_scanners.py  test_blascanner.py  test_integration.py  test_map_datasets.py  test_organizations.py  test_scanproxies.py  test_smarturl.py  test_smoketest.py  test_tls_scan_qualys.py
tests/etc/: mysql-minimal-memory.cnf
tests/integration/: README.md  conftest.py  test_celery.py
tests/scanners/: conftest.py  test_censor_sensitive_data.py  test_dnssec.py  test_dummy.py  test_internet_nl_mail.py  test_security_headers.py
tests/scanproxy/: proxies.json
tests/system/: README.md  conftest.py  test_smoketest.py
tests/tls_scan_qualys_responses/: in_progress.json  resolving_domain.json  unable_to_resolve.json  www.faalkaart.nl.json
tools/: README.md  autoreload.sh  compare_differences.sh  dev_setup.sh  dnssec.pl  docker-build  docker-dev-failmap  docker-failmap  docker-failmap-with-db  docker-install-dnscheck.sh  docker-test  docker-websecmap  faalwerker.sh  generate_requests.js  show_ratings.sh
websecmap/: __init__.py  converters.py  jet.py  manage.py  settings.py  signals.py  testrunner.py  types.py  urls.py  wsgi.py
websecmap/api/: admin.py  apps.py  logic.py  models.py  tasks.py  urls.py  views.py
websecmap/app/: __init__.py  admin.py  common.py  constance.py  dashboard.py  dashboard_module_views.py  dashboard_modules.py  debug.py  models.py  progressbar.py  tasks.py  tests.py
websecmap/celery/: __init__.py  worker.py
websecmap/fail/: apps.py
websecmap/game/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
websecmap/hypersh/: admin.py  apps.py  models.py  tasks.py
websecmap/map/: admin.py  geojson.py  map_configs.py  models.py  rebuild_report.py  report.py  tasks.py  urls.py  views.py
websecmap/organizations/: admin.py  adminstrative_transformations.py  apps.py  models.py  signals.py
websecmap/pro/: admin.py  apps.py  forms.py  models.py  sync_datafeeds.py  tests.py  urllist_report.py  urllist_report_historically.py  urls.py  views.py
websecmap/reporting/: admin.py  for_map_organizations.py  models.py  rebuild_url_report.py  report.py  severity.py  tests.py
websecmap/scanners/: __init__.py  admin.py  apps.py  autoexplain.py  constance.py  duplicates.py  find_scanproxies.py  impact.py  models.py  plannedscan.py  proxy.py  proxy_unsafe.py  scanmanager.py  scanqueue.py  tasks.py
websecmap/uploads/: .gitignore
(+1269 files in other folders)
